src/BootstrapBlazor/wwwroot/css/bootstrap.blazor.css
/* ... */
.upload-list-item:first-child {
    margin-top: 10px;
}

.upload-list-item {
    font-size: 14px;
    color: #606266;
    line-height: 1.8;
    margin-top: 0.5rem;
    border-radius: 4px;
    width: 100%;
    display: flex;
    position: relative;
}

.upload-prev-progress-info {
    display: none;
}

    .upload-prev-progress-info .upload-list-item-text {
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;
    }

.upload-list-item-rate {
    display: none;
}

.upload-body {
    display: flex;
    flex-wrap: wrap;
}

.upload-file-icon {
    font-size: 60px;
    line-height: 60px;
    display: none;
}

.is-card .upload-file-icon {
    font-size: 80px;
    line-height: 80px;
    margin-top: 40px;
}

.is-stack .upload-file-icon {
    width: 100px;
    text-align: center;
    border: solid 1px #eee;
    border-radius: 4px;
    margin: 4px;
    padding: 4px;
}

.is-stack {
    flex-direction: column;
}

    .is-stack .upload-button {
        align-self: flex-start;
        margin-left: 0;
    }

    .is-stack .upload-prev {
        margin-left: 0;
        height: 80px;
        justify-content: flex-start;
    }

        .is-stack .upload-prev:not(:nth-child(2)) {
            margin-top: 1rem;
        }

        .is-stack .upload-prev img {
            width: 100px;
            height: auto;
            max-height: 70px;
            border-radius: 4px;
            border: solid 1px #eee;
            margin: 0.25rem;
        }

        .is-stack .fa-plus, .is-stack .upload-prev .fa-spinner {
            display: none;
        }

    .is-stack.is-progress .upload-prev-progress {
        display: flex;
        flex: 1 1 auto;
        flex-direction: column;
        left: 130px;
        right: 50px;
    }

    .is-stack .upload-prev-progress .upload-prev-progress-text {
        bottom: 0;
        right: 0.5rem;
        color: #000;
    }

    .is-stack .upload-prev-progress .upload-prev-progress-cur {
        height: 10px;
    }

    .is-stack .upload-prev-progress-info {
        display: flex;
        position: absolute;
        bottom: 1.25rem;
        left: 0;
        right: 0;
    }

    .is-stack .upload-list-item-rate {
        display: block;
    }

    .is-stack .upload-body {
        overflow: auto;
        max-height: 384px;
        padding-right: 1rem;
        margin-top: 1rem;
    }

    .is-stack .upload-prev .upload-item-actions {
        position: absolute;
        bottom: 1rem;
        right: 0.75rem;
        left: auto;
        top: auto;
        width: auto;
        height: auto;
        background: none;
        opacity: 1;
        font-size: 14px;
        border: solid 1px #dc3545;
        border-radius: 0.2rem;
        padding: 0.0625rem 0.3125rem
    }

        .is-stack .upload-prev .upload-item-actions .upload-item-delete {
            color: #dc3545;
        }

        .is-stack .upload-prev .upload-item-actions:hover {
            background-color: #dc3545;
            border-color: #dc3545;
        }

            .is-stack .upload-prev .upload-item-actions:hover .upload-item-delete {
                color: #fff;
            }

    .is-stack .upload-prev:hover .upload-item-actions {
        display: block;
    }

    .is-stack .is-invalid-file .upload-prev-progress {
        display: none;
    }

.upload-prev-invalid-file {
    display: none;
}

.is-stack .is-invalid-file .upload-prev-invalid-file {
    display: flex;
    width: 100%;
    margin: 0 4rem 0 1rem;
}

.upload-prev-invalid-file .file-name {
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 180px;
    white-space: nowrap;
}

.is-file.upload-prev img {
    display: none;
}

.is-file .upload-file-icon {
    display: block;
}
/*end upload*/

/*divider*/
.divider {
    background-color: #dcdfe6;
    position: relative;
}

    .divider .divider-text {
        position: absolute;
        background-color: #fff;
        padding: 0 20px;
        font-weight: 500;
        color: #303133;
        font-size: 14px;
    }

.divider.divider-horizontal {
    display: block;
    height: 1px;
    width: 100%;
    margin: 1rem 0;
}

    .divider.divider-horizontal .divider-text.is-left {
        left: 20px;
        transform: translateY(-50%);
    }

    .divider.divider-horizontal .divider-text.is-center {
        left: 50%;
        transform: translateX(-50%) translateY(-50%);
    }

    .divider.divider-horizontal .divider-text.is-right {
        right: 20px;
        transform: translateY(-50%);
    }

.divider-vertical {
    width: 1px;
    margin: 0 1rem;
}

    .divider.divider-vertical .divider-text {
        padding: 20px 0;
    }

    .divider.divider-vertical .divider-text.is-left {
        top: 20px;
        transform: translateX(-50%);
    }

    .divider.divider-vertical .divider-text.is-center {
        top: 50%;
        transform: translateX(-50%) translateY(-50%);
    }

    .divider.divider-vertical .divider-text.is-right {
        bottom: 20px;
        transform: translateX(-50%);
    }
/*end divider*/

/*echart*/
.chart {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

    .chart.is-loading .chart-loading {
        display: block;
    }

    .chart .chart-loading {
        position: absolute;
        display: none;
    }
/*end echart*/

